--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     // JPA Data (We are going to use repositories, Entities, Hibernate, etc...)
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-
+    compile "org.springframework.boot:spring-boot-starter-security"
     // Use MySQL Connector-J
     compile 'mysql:mysql-connector-java'
     
